# gomoku

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  GameEngine.h  GameEngineDLL.cpp  GameEngineDLL.h  README.md  build.bat  bulid-debug.bat  game.py  pyproject.toml  test_fault_tolerance.py
.agent/skills/serverchan-push/: SKILL.md
.agent/skills/serverchan-push/agents/: openai.yaml
.agent/skills/serverchan-push/scripts/: serverchan_push.py
.agent/workflows/: ml-apply.md  ml-archive.md  ml-explore.md  ml-propose.md
.claude/skills/atml-apply/: SKILL.md
.claude/skills/atml-archive/: SKILL.md
.claude/skills/atml-explore/: SKILL.md
.claude/skills/atml-propose/: SKILL.md
.claude/workflows/: parallel-changes.js
docs/ml/: insights.json
docs/ml/changes/test_02/: training_plan.json
docs/ml/changes/v4-cont/: training_plan.json
docs/ml/plans/b10c256nbt-validation/: design.md  tasks.md
docs/ml/plans/machine-benchmark/: design.md  proposal.md
docs/ml/plans/test-anti-forget/: training_plan.json
docs/ml/plans/test-plan/: training_plan.json
docs/ml/plans/test02-param-fix/: training_plan.json
docs/ml/references/: deep-research-report.md
docs/ml/specs/: training-knowledge.md
docs/ml/specs/atml-skills/: spec.md
docs/research/: elo-rating-integration.md
engine/: CMakeLists.txt  build.bat  build.sh
engine/src/: GameEngine.h  GameEngineDLL.cpp  GameEngineDLL.h  KataInferenceAdapter.cpp  KataInferenceAdapter.h  KataSelfplayMain.cpp
game/: game.py  game_logger.py  game_logic.py  model_weights.txt
game/data/: opening_book.json  opening_seeds.json  select_opening.py
ml/: automl_cli.py  dag_engine.py  elo_rating.py  elo_tracker.py  mlevo_cli.py  model_registry.py  plan_registry.py  populate_opening_book.py  run_training_loop.py  sprt.py  training_ui.py  training_ui_state.json  verify_opening_book.py  verify_symmetry.py
ml/benchmark/: collectors.py  metrics_collector.py  pk_bench.py  run_benchmark.py  selfplay_bench.py  train_bench.py
ml/data/: dryrun_vram_test.sh
ml/data/b10c256nbt_data/: native_selfplay_15.cfg
ml/webui/: app.py  index.html
openspec/: config.yaml
openspec/changes/adaptive-curriculum/: proposal.md
openspec/changes/archive/2026-05-25-fix-swap-black-first-move-and-game-record/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-25-fix-turn-3-swap-race-condition/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-25-hybrid-opening-book-and-search-fusion/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-25-improve-ai-dashboard-and-logs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-26-adaptive-swap-decision-engine/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-26-cli-headless-runner/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-26-refactor-game-state-machine-and-logger/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-26-ui-indicators-and-win-layout-optimization/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-27-automl-supervised-evolution/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-27-establish-tdd-test-baseline/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-07-ml-pipeline-dag-engineering/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-07-update-mlevo-skills/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-09-curved-skip-edges/: design.md  proposal.md
openspec/changes/archive/2026-06-09-log-viewer-redesign/: proposal.md  tasks.md
openspec/changes/archive/2026-06-09-training-hypergraph/: proposal.md
openspec/changes/archive/2026-06-09-workspace-engineering-reorg/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-11-mlevo-archive-integrity/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-12-training-pipeline-optimization/: code-report-mapping.md  design.md  (+1 more)
openspec/changes/cusp-curriculum/: proposal.md
openspec/changes/fix-pk-and-dual-model/: tasks.md
openspec/changes/multi-process-dual-model-selfplay/: tasks.md
openspec/changes/policy-consolidation/: proposal.md
openspec/changes/reset-edges-curved-arc/: design.md  proposal.md
openspec/changes/training-hypergraph/: design.md  tasks.md
openspec/changes/training-pipeline-optimization/: proposal.md  research-brief.md  tasks.md
openspec/changes/v3-anti-overfit-training/: design.md  proposal.md  tasks.md
openspec/specs/automl-supervised-evolution/: spec.md
openspec/specs/cli-headless-runner/: spec.md
openspec/specs/engineering/: spec.md
openspec/specs/framework/: spec.md
openspec/specs/game-strength/: spec.md
openspec/specs/headless-cli/: spec.md
openspec/specs/lr-scheduling-memory/: spec.md
openspec/specs/mlevo-skills/: spec.md
openspec/specs/model-registry/: spec.md
openspec/specs/multi-process-selfplay/: spec.md
openspec/specs/path-safety-tests/: spec.md
openspec/specs/sprt-evaluation/: spec.md
openspec/specs/tdd-harness/: spec.md
openspec/specs/test-framework/: spec.md
openspec/specs/training-webui/: spec.md
openspec/specs/training-webui-markdown/: spec.md
openspec/specs/training-webui-plans/: spec.md
openspec/specs/training-webui-single-server/: spec.md
openspec/specs/training-webui-warnings/: spec.md
openspec/specs/worker-ipc-client/: spec.md
openspec/specs/workspace-structure/: spec.md
tests/: README.md  conftest.py  test_path_safety.py  test_pk_logic.py  test_sync_drive.py  test_worker_client.py
tests/game/: test_dll_integration.py  test_game_logic.py
tests/ml/: test_automl.py  test_branch.py  test_cli_state.py  test_dag_engine.py  test_elo_rating.py  test_elo_tracker.py  test_integration.py  test_migration.py  test_mlevo.py  test_model_registry.py  test_pipeline_stages.py  test_training_pipeline.py  test_webui_api.py
tools/: ai_worker.py  headless_runner.py  sync_drive.py  worker_client.py
webui/frontend/: index.html  package-lock.json
webui/frontend/src/: App.css  App.jsx  api.js  index.css
(+127 files in other folders)
